# Django-React-Music_Controller

client/: package.json
server/: pyproject.toml
server/api/: models.py  urls.py  views.py
server/api/migrations/: 0001_initial.py
server/core/: asgi.py  settings.py
